--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <div id="wrapper-div">
     <div id="top-div">
         <div id="logo-div">
-            <img src="Text.png" width="150">
+            <a href="Text.png"><img src="Text.png" width="150"></a>
         </div>
 
         <div id="nav-div">
@@ -66,7 +66,7 @@
 </div>
     <div id="footer-div">
         <div id="logo2-div">
-            <img src="Flame.png" width="50">
+            <a href="Flame.png"><img src="Flame.png" width="50"></a>
         </div>
         <div id="name-div">
             Weinard D. Manianglung
